[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools_scm[toml]>=3.4",
    "setuptools_scm_git_archive"
]
build-backend = "setuptools.build_meta"

[project]
name = "dwave-tikz"
description = "Tools for generating pictures for various D-Wave topologies"
readme = "README.md"
authors = [
    {name="Konrad Jałowiecki", email="dexter2206@gmail.com"},
]
license = {text="MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.8"
dependencies = [
    "dwave-networkx ~= 0.8.13",
    "jinja2 ~= 3.1.2"

]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=6.1.2", "pytest-mock>=3.3.1", "pytest-cov>=2.12.1"]
dev = ["flake8>=4.0.1", "black>=21.12b0", "isort>=5.10.1", "mypy>=0.961"]

[project.urls]
"Source Code" = "https://github.com/dexter2206/dwave-tikz"

[tool.setuptools.packages]
find = {exclude = ["tests"]}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''

[tool.setuptools_scm]

[project.scripts]
dwavetikz = "dwavetikz.cli:main"